[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lq-ai-teams-bridge"
version = "0.1.0"
description = "LQ.AI Microsoft Teams bridge — OAuth admin consent + tenant persistence (M3-D3)"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "LegalQuants" }]

# M3-D3 — the teams-bridge mirrors slack-bridge for Microsoft Teams.
# It handles:
#
# 1. The OAuth admin-consent flow (operator clicks "Install Teams" in
#    the LQ.AI admin UI → bridge redirects to Microsoft identity
#    platform's multi-tenant /authorize endpoint with prompt=admin_consent
#    → tenant admin consents → callback exchanges the code for tokens
#    → bridge extracts tid+oid from the id_token and POSTs the tenant
#    record to the LQ.AI api over the shared LQ_AI_BRIDGE_TOKEN bearer).
# 2. (Future M3-D2 / community contribution) the `/lq` slash command
#    handler for Teams. Descoped from M3 per PRD §9 DE-288.
#
# Unlike the Slack equivalent, the Teams bot uses operator-supplied
# APP-LEVEL credentials (one MICROSOFT_APP_ID + MICROSOFT_APP_PASSWORD
# per deployment) rather than per-tenant bot tokens. There is nothing
# per-tenant to encrypt in M3-D3.
#
# Decision M3-D3-3 (raw httpx, no botbuilder SDK): the Microsoft
# identity platform OAuth surface is plain HTTP; the official
# botbuilder-core SDK adds ~15 transitive deps (msrest, msal,
# aiohttp, botbuilder-schema, ...) we don't need for the M3-D3
# plumbing scope. Mirrors slack-bridge's "slack-sdk only for the
# OAuth exchange, everything else raw" posture.
dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.32,<0.48",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "httpx>=0.27,<0.29",
    # OpenTelemetry — mirrors api/ + gateway/ + slack-bridge/ so the
    # teams-bridge participates in the M1 OTel substrate from day one.
    # M3 Phase F adds domain spans on top.
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-httpx>=0.32,<0.40",
    "ruff>=0.6,<0.14",
    "mypy>=1.11,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests with no external deps",
    "integration: tests against real external services or mocked equivalents",
]
